--- a/src/app/chat-room/chat-room.component.html
+++ b/src/app/chat-room/chat-room.component.html
@@ -2,6 +2,6 @@
     <div *ngFor="let message of msgList | async" class="message">
       <app-message [chatMessage]=message></app-message>
     </div>
-    {{(msgList | async)?.length}} message
+   <!-- {{(msgList | async)?.length}} message-->
   </div>
   
