--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,6 @@
 <div class="login-form">
 
-  <div class="avatar">
-    <img src="">
-  </div>
+  
   <h1>Login</h1>
   
   <form #f="ngForm" (ngSubmit)="onSubmit()" >
@@ -34,7 +32,7 @@
 
       <div class="form-group">
           <label>Password</label>
-          <input type="text" name="password"  class="form-control"  [(ngModel)]="password"  required >
+          <input type="password" name="password"  class="form-control"  [(ngModel)]="password"  required >
       </div>
   
      
