--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -44,7 +44,7 @@
 
         <div class="form-group">
             <label>Password</label>
-            <input type="text" name="password"  class="form-control"  [(ngModel)]="password"  required >
+            <input type="password" name="password"  class="form-control"  [(ngModel)]="password"  required >
         </div>
     
         <div class="choose-image">
